--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,13 +5,13 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-
 events {
     worker_connections  1024;
 }
 
 
 http {
+
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -27,6 +27,8 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
+
+    server_names_hash_bucket_size 512;
 
     include /etc/nginx/conf.d/*.conf;
 }
